<resources>
    <string name="app_name">TestTaskTickets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flights">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="shorts">Короче</string>
    <string name="subscription">Подписка</string>
    <string name="profile">Профиль</string>
    <string name="mainText">Поиск дешевых авиабилетов</string>
    <string name="plug_text">Заглушка</string>
    <string name="hint_search">Куда - Турция</string>
    <string name="plug_text_search">Москва</string>
    <string name="second_text_title_main">Музыкально отлететь</string>
    <string name="button_text">Показать все места</string>
    <string name="a_difficult_route">Сложный Маршрут</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="holidays">Выходные</string>
    <string name="everywhere">Куда угодно</string>
    <string name="Istanbul">Стамбул</string>
    <string name="Sochi">Сочи</string>
    <string name="Phuket">Пхукет</string>
    <string name="a_popular_destination">Популярное направление</string>
    <string name="straight_rails">Прямые рельсы</string>
    <string name="show_more">Показать все</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="subcribe_price">Подписка на цену</string>
    <string name="back">Обратно</string>
    <string name="date">Дата</string>
    <string name="persons">1,эконом</string>
    <string name="filters">Фильтры</string>
    <string name="transfers">Пересадки</string>
    <string name="no_transfer">Без пересадок</string>
    <string name="with_luggage">Только с багажом</string>
    <string name="filter">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="popular_filters">Популярные фильтры</string>
    <string name="luggage_included">Багаж включен</string>
    <string name="straight_lines_only">Только прямые</string>
    <string name="number_of_transfers">Количество пересадок</string>
    <string name="to_2">До 2</string>
    <string name="time_transfers">Длительность пересадок</string>
    <string name="no_transfers">Без пересадок в странах, закрытых для туристов</string>
    <string name="no_separate_bookings">Без раздельных бронирований</string>
    <string name="no_overnight_transfer">Без ночной пересадки</string>
    <string name="without_changing_the_airport">Без смены аэропорта</string>
    <string name="show_tickets">Показать билеты от</string>
    <string name="text_example">Die Antwoord</string>
    <string name="price">от 20000 ₽</string>
    <string name="hint_search_from">Откуда - Турция</string>
    <string name="passenger">пассажир</string>
    <string name="hint_search_from_moscow">Откуда - Москва</string>
</resources>