<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ticketscreens.FiltersTicketFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/value_16_dp"
        app:layout_editor_absoluteY="@dimen/value_16_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/value_16_dp"
        app:layout_editor_absoluteY="@dimen/value_16_dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16_dp"
        android:background="@color/grey_4"
        android:padding="@dimen/value_8_dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16_dp"
        android:text="@string/popular_filters"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/value_16_dp"
        android:paddingStart="@dimen/value_16_dp"
        android:paddingEnd="@dimen/value_16_dp"
        android:background="@color/grey_3"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:singleSelection="true">


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luggage_included"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/grey_4"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/straight_lines_only"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/grey_4" />


    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/transfers"
        android:layout_marginTop="@dimen/value_32_dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_categories" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_3"
        android:layout_marginTop="@dimen/value_16_dp"
        android:padding="@dimen/value_8_dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/textView5">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number_of_transfers"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/chip_number_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/chip_number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/grey_4"
            android:paddingLeft="@dimen/value_8_dp"
            android:paddingRight="@dimen/value_8_dp"
            android:text="@string/to_2"
            android:textColor="@color/text_color_grey"
            android:textStyle="italic"
            app:chipBackgroundColor="@color/grey_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/customSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_8_dp"
            android:max="2"
            android:progress="0"
            android:splitTrack="false"
            android:progressBackgroundTint="@color/blue"
            android:thumbTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>