<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ticketscreens.FiltersFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/value_16_dp"
        app:layout_editor_absoluteY="@dimen/value_16_dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/value_16_dp"
        app:layout_editor_absoluteY="@dimen/value_16_dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16_dp"
        android:background="@color/grey_4"
        android:padding="@dimen/value_8_dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_8_dp"
            android:text="@string/filters"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16_dp"
        android:text="@string/transfers"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16_dp"
        android:background="@color/grey_4"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/value_8_dp"
            android:paddingRight="@dimen/value_8_dp"
            android:text="@string/no_transfer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchCompat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/value_8_dp"
            android:paddingRight="@dimen/value_8_dp"
            app:thumbTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_4"
        android:layout_marginTop="@dimen/value_16_dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guide_line_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/value_8_dp"
            android:paddingRight="@dimen/value_8_dp"
            android:text="@string/with_luggage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchCompat2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/value_8_dp"
            android:paddingRight="@dimen/value_8_dp"
            app:thumbTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>